# BetterRobot

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASING.md  genindex.html  index.html  objects.inv  plan.md  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/concepts/: architecture.doctree  batching_and_backends.doctree  collision_and_geometry.doctree  dynamics.doctree  index.doctree  joints_bodies_frames.doctree  kinematics.doctree  lie_and_spatial.doctree  model_and_data.doctree  parsers_and_ir.doctree  residuals_and_costs.doctree  solver_stack.doctree  tasks.doctree  viewer.doctree  vision.doctree
.doctrees/conventions/: contracts.doctree  extension.doctree  index.doctree  naming.doctree  packaging.doctree  performance.doctree  style.doctree  testing.doctree
.doctrees/getting_started/: floating_base.doctree  forward_kinematics.doctree  index.doctree  installation.doctree  inverse_kinematics.doctree
.doctrees/reference/: changelog.doctree  glossary.doctree  index.doctree  roadmap.doctree
_modules/: index.html
_modules/better_robot/: backends.html  exceptions.html  io.html  kinematics.html  optim.html
_sources/concepts/: batching_and_backends.md  index.md  kinematics.md  residuals_and_costs.md  viewer.md  vision.md
_sources/conventions/: extension.md  index.md  naming.md  performance.md
_sources/getting_started/: floating_base.md  forward_kinematics.md
_sources/reference/: roadmap.md
concepts/: architecture.html  batching_and_backends.html  collision_and_geometry.html  dynamics.html  index.html  joints_bodies_frames.html  kinematics.html  lie_and_spatial.html  model_and_data.html  parsers_and_ir.html  residuals_and_costs.html  solver_stack.html  tasks.html  viewer.html  vision.html
conventions/: contracts.html  extension.html  index.html  naming.html  packaging.html  performance.html  style.html  testing.html
docs/: 00_VISION.md  01_ARCHITECTURE.md  01_analysis.md  02_DATA_MODEL.md  02_target_architecture.md  03_LIE_AND_SPATIAL.md  03_migration_plan.md  04_PARSERS.md  05_KINEMATICS.md  06_DYNAMICS.md  07_RESIDUALS_COSTS_SOLVERS.md  08_TASKS.md  09_COLLISION_GEOMETRY.md  10_BATCHING_AND_BACKENDS.md  11_SKELETON_AND_MIGRATION.md  12_VIEWER.md  13_NAMING.md  14_PERFORMANCE.md  15_EXTENSION.md  16_TESTING.md  17_CONTRACTS.md  18_ROADMAP.md  CHANGELOG.md  Makefile  PYPOSE_ISSUES.md  README.md  UPDATE_PHASES.md  conf.py  index.md
docs/_static/: custom.css
docs/claude_plan/: 00_principles.md
docs/concepts/: architecture.md  backends.md  batched_by_default.md  collision_and_geometry.md  dynamics.md  index.md  joints_bodies_frames.md  lie_and_spatial.md  model_and_data.md  parsers_and_ir.md  solver_stack.md  tasks.md
docs/conventions/: 13_NAMING.md  14_PERFORMANCE.md  15_EXTENSION.md  16_TESTING.md  17_CONTRACTS.md  19_STYLE.md  20_PACKAGING.md  contracts.md  index.md  packaging.md  style.md  testing.md
docs/design/: 00_VISION.md  01_ARCHITECTURE.md  02_DATA_MODEL.md  03_LIE_AND_SPATIAL.md  04_PARSERS.md  05_KINEMATICS.md  06_DYNAMICS.md  07_RESIDUALS_COSTS_SOLVERS.md  08_TASKS.md  09_COLLISION_GEOMETRY.md  10_BATCHING_AND_BACKENDS.md  11_SKELETON_AND_MIGRATION.md  12_VIEWER.md  index.md
docs/getting_started/: floating_base.md  forward_kinematics.md  index.md  installation.md  inverse_kinematics.md
docs/legacy/: README.md  pypose_issues.md
docs/reference/: changelog.md  glossary.md  index.md  roadmap.md
docs/site/: conf.py  index.md
docs/status/: 18_ROADMAP.md  PYPOSE_ISSUES.md
examples/: 01_basic_ik.py  02_g1_ik.py  04_smpl_like_body.py  05_panda_trajopt.py
getting_started/: floating_base.html  forward_kinematics.html  index.html  installation.html  inverse_kinematics.html
reference/: changelog.html  glossary.html  index.html  roadmap.html
src/better_robot/: __init__.py  _typing.py  _version.py  exceptions.py
tests/: CLAUDE.md  conftest.py  test_collision.py  test_costs.py  test_exceptions.py  test_exceptions_wired.py  test_geometry.py  test_ik.py  test_imports.py  test_jacobian.py  test_layer_dependencies.py  test_lm_benchmark.py  test_public_api.py  test_robot.py  test_skeleton_signatures.py  test_solvers.py
tests/bench/: README.md  baseline_cpu.json  baseline_cuda_l40.json  bench_forward_kinematics.py  bench_jacobian.py  bench_lie.py  bench_solve_ik.py  conftest.py  test_mem_watermark.py
tests/contract/: test_backend_boundary.py  test_cache_invariants.py  test_deprecations.py  test_docstrings.py  test_hot_path_lint.py  test_layer_dependencies.py  test_naming.py  test_no_legacy_strings.py  test_optional_imports.py  test_pluggable_protocols.py  test_protocols.py  test_public_api.py  test_shape_annotations.py  test_solver_state.py  test_submodule_public_imports.py
tests/data_model/: test_joint_models.py  test_model_data.py  test_topology.py
tests/dynamics/: test_action_models.py  test_integrators.py
tests/io/: test_asset_resolver.py  test_build_model.py  test_builder_helpers.py  test_ir_schema_version.py  test_kinematic_tree.py  test_programmatic.py  test_smpl_like.py  test_urdf.py
tests/kinematics/: _generate_fk_reference.py  fk_reference.npz  test_fk.py  test_fk_regression.py  test_jacobians.py
tests/lie/: test_interpolation.py  test_se3.py  test_so3.py  test_tangents.py  test_torch_backend_gradcheck.py  test_torch_backend_singularities.py  test_types_se3.py  test_types_so3.py
tests/optim/: test_config_wiring.py  test_matrix_free.py  test_multi_stage.py
tests/residuals/: test_smoothness.py
tests/spatial/: test_inertia_apply_numerics.py  test_spatial.py
tests/tasks/: test_ik_regression.py  test_lm_then_lbfgs.py  test_trajectory.py  test_trajopt_param.py
tests/test_pinocchio/: conftest.py  test_aba_matches_pinocchio.py  test_centroidal.py  test_crba_matches_pinocchio.py  test_difference_matches_pinocchio.py  test_dynamics_derivatives.py  test_fk_matches_pinocchio.py  test_frame_jacobian_matches_pinocchio.py  test_lie_log_exp_match_pinocchio.py  test_right_jacobian_se3_matches_pinocchio.py  test_rnea_advanced_joints.py  (+1 more)
(+933 files in other folders)
