[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "better-robot"
version = "0.2.0"
description = "PyTorch-native robot kinematics, dynamics, and optimisation."
readme = "README.md"
requires-python = ">=3.10"
# Lean core: only torch + numpy + nice-error UX. Everything format- or
# visualisation-specific is opt-in via ``[project.optional-dependencies]``.
dependencies = [
    "torch>=2.1.0",
    "numpy>=2.0",
    "rich>=13",
]

[project.optional-dependencies]
# ── Format parsers ────────────────────────────────────────────────────────
urdf = [
    "yourdfpy>=0.0.14",
]
mjcf = [
    "mujoco>=3.1",
]

# ── Visualisation / geometry ──────────────────────────────────────────────
viewer = [
    "viser>=0.2.0",
    "trimesh>=4.0.0",
]
geometry = [
    "trimesh>=4.0.0",
]

# ── Examples (standard robot zoo) ─────────────────────────────────────────
examples = [
    "yourdfpy>=0.0.14",
    "robot_descriptions>=1.0.0",
]

# ── Backend acceleration (CUDA-only) ──────────────────────────────────────
warp = [
    "warp-lang>=1.0",
]

# ── Docs site (P12) ───────────────────────────────────────────────────────
docs = [
    # Sphinx 8 removed SphinxUnreferencedFootnotesDetector that
    # myst-parser still tries to deregister at setup; pin to <8 until
    # myst-parser ships a fix (tracked upstream in executablebooks/MyST-Parser).
    "sphinx>=7.0,<8",
    "myst-parser>=2.0,<4",
    "myst-nb>=1.1,<1.3",
    "sphinx-book-theme>=1.1",
    "sphinx-design>=0.5",
    "sphinx-autodoc2>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-bibtex>=2.6",
    "sphinx-tabs>=3.4",
]

# ── Bench harness (advisory CI gate) ──────────────────────────────────────
bench = [
    "pytest-benchmark>=4",
    "pyperf>=2.7",
]

# ── Test / dev ────────────────────────────────────────────────────────────
test = [
    "pytest>=8.0",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6.100",
    "pin>=2.7",
]
dev = [
    "better-robot[urdf,mjcf,viewer,geometry,examples,test,docs,bench]",
    "ruff",
    "pyright",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jaxtyping>=0.2.30",
]
all = [
    "better-robot[urdf,mjcf,viewer,geometry,examples,docs,bench,warp]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/better_robot"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "slow: long-running tests (skip with '-m \"not slow\"')",
    "cuda: tests requiring a CUDA device",
    "bench: benchmark micro-tests (advisory; not part of contract)",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "PLC", "PLE", "PLR", "PLW"]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = false
files = ["src/better_robot"]

[tool.coverage.run]
branch = true
source = ["better_robot"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@runtime_checkable",
]
