[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "better-robot"
version = "0.2.0"
description = "PyTorch-native robot kinematics, dynamics, and optimisation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=2.0",
    "rich>=13",
    "yourdfpy>=0.0.14",
    "mujoco>=3.1",
    "trimesh>=4.0.0",
    "viser>=0.2.0",
    "robot_descriptions>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "pytest-benchmark>=4",
    "hypothesis>=6.100",
    "pin>=2.7",
    "pyperf>=2.7",
    # Sphinx 8 removed SphinxUnreferencedFootnotesDetector that
    # myst-parser still tries to deregister at setup; pin to <8 until
    # myst-parser ships a fix (tracked upstream in executablebooks/MyST-Parser).
    "sphinx>=7.0,<8",
    "myst-parser>=2.0,<4",
    "myst-nb>=1.1,<1.3",
    "sphinx-book-theme>=1.1",
    "sphinx-design>=0.5",
    "sphinx-autodoc2>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-bibtex>=2.6",
    "sphinx-tabs>=3.4",
    "ruff",
    "pyright",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jaxtyping>=0.2.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/better_robot"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "slow: long-running tests (skip with '-m \"not slow\"')",
    "cuda: tests requiring a CUDA device",
    "bench: benchmark micro-tests (advisory; not part of contract)",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "PLC", "PLE", "PLR", "PLW"]
ignore = ["E501", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = false
files = ["src/better_robot"]

[tool.coverage.run]
branch = true
source = ["better_robot"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@runtime_checkable",
]
